logs/totalopenstation.log
Listing '.'...
Listing './bin'...
Compiling './bin/miniterm.py'...
Compiling './bin/totalopenstation-cli-connector.py'...
***   File "./bin/totalopenstation-cli-connector.py", line 69
    except ImportError, msg:
                      ^
SyntaxError: invalid syntax

Compiling './bin/totalopenstation-cli-parser.py'...
***   File "./bin/totalopenstation-cli-parser.py", line 110
    except KeyError, message:
                   ^
SyntaxError: invalid syntax

Compiling './bin/totalopenstation-gui.py'...
***   File "./bin/totalopenstation-gui.py", line 279
    except ImportError, msg:
                      ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyserial-3.4.dist-info'...
Listing './lib/python3.5/site-packages/serial'...
Listing './lib/python3.5/site-packages/serial/threaded'...
Listing './lib/python3.5/site-packages/serial/tools'...
Listing './lib/python3.5/site-packages/serial/urlhandler'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/totalopenstation'...
Listing './lib/python3.5/site-packages/totalopenstation/formats'...
Listing './lib/python3.5/site-packages/totalopenstation/models'...
Listing './lib/python3.5/site-packages/totalopenstation/output'...
Compiling './lib/python3.5/site-packages/totalopenstation/output/tops_geojson.py'...
***   File "./lib/python3.5/site-packages/totalopenstation/output/tops_geojson.py", line 31
    x, y, z = [float(c) for c in x, y, z]
                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/totalopenstation/tests'...
Listing './lib/python3.5/site-packages/totalopenstation/utils'...
Compiling './lib/python3.5/site-packages/totalopenstation/utils/scanwin32.py'...
***   File "./lib/python3.5/site-packages/totalopenstation/utils/scanwin32.py", line 83
    GUID_CLASS_COMPORT = GUID(0x86e0d1e0L, 0x8089, 0x11d0,
                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/totalopenstation-0.3.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
